# practica3

./: .gitignore  CMakeLists.txt  CMakeLists_MAC.txt  README.md  install.sh
data/textures/: dice_extended.xcf
include/connection/: Connection.h
include/controller/: GameSelector.h
include/gui/: BoardSprite.h  BoardTrapSprite.h  Button.h  ClickableSprite.h  DiceSprite.h  ExplosionSprite.h  IncludesSFML.h  ParchisGUI.h  PieceSprite.h  SpecialItemSprite.h  SpriteAnimator.h  cout_colors.h
include/model/: Attributes.h  Board.h  BoardTrap.h  Dice.h  GUIPlayer.h  Heuristic.h  Ninja.h  NodeCounter.h  Parchis.h  Piece.h  Player.h  PowerBar.h  RemotePlayer.h
src/: main.cpp
src/connection/: Connection.cpp
src/controller/: GameSelector.cpp
src/gui/: BoardSprite.cpp  BoardTrapSprite.cpp  Button.cpp  ClickableSprite.cpp  DiceSprite.cpp  ExplosionSprite.cpp  ParchisGUI.cpp  PieceSprite.cpp  SpecialItemSprite.cpp  SpriteAnimator.cpp
src/model/: Board.cpp  BoardTrap.cpp  Dice.cpp  GUIPlayer.cpp  Heuristic.cpp  Ninja.cpp  NodeCounter.cpp  Parchis.cpp  Piece.cpp  Player.cpp  PowerBar.cpp  RemotePlayer.cpp
src/personal/: AIPlayer.cpp  AIPlayer.h
